# udacity-data-engineer-capstone

./: .gitignore  Capstone Project Template.ipynb  Makefile  README.md  docker-compose-airflow.yml  pyproject.toml
lol_airflow/: create_tables.sql
lol_airflow/dags/: orchestrator_dag.py  stage_s3_to_redshift_and_validate_subdag.py
lol_airflow/plugins/: __init__.py
lol_airflow/plugins/helpers/: __init__.py  s3_uri_formatter.py  sql_dmls.py
lol_airflow/plugins/operators/: __init__.py  data_quality.py  data_quality_validator.py  ddl_redshift_operator.py  emr_operator.py  fetch_and_stage_champions_external_data.py  fetch_and_stage_external_data.py  fetch_and_stage_items_external_data.py  fetch_and_stage_matches_external_data.py  load_dimension.py  load_fact.py  stage_to_redshift_operator.py
lol_pyspark/: spark_etl.py  transformer.py
